--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   "author": "KhamzaevAsad",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.13",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "daisyui": "^5.1.10",
+    "tailwindcss": "^3.4.17"
   }
 }
