Refactor project structure: remove Tailwind CSS and DaisyUI dependencies, replace with custom styles; update form handling in server.js; clean up EJS views and stylesheets.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
-    "daisyui": "^5.1.10",
-    "tailwindcss": "^3.4.17"
+    "daisyui": "^5.1.10"
   }
 }
