Feat: MongoDB Connect

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/cli": "^4.1.13",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "mongodb": "^3.2.6",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
