--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@tailwindcss/cli": "^4.1.13",
+    "axios": "^1.12.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongodb": "^3.2.6",
